<?xml version="1.0"?>
<package format="3">
  <name>my_robot_interfaces</name>
  <version>0.0.0</version>
  <description>Robot custom interfaces</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_runtime</depend>

  <build_depend>rosidl_default_generators</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
